--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <a href="Exam.html"> Exam
-  <h1>🌸  🌸</h1>
+  <h1>🌸 VIDYA COMPUTER 🌸</h1>
   <p>यह एक साधारण लेकिन आकर्षक HTML पेज है,  
      जो GitHub Pages के ज़रिए इंटरनेट पर लाइव होगा।  
      इसे देखकर आपको पता चलेगा कि HTML से शुरुआत कितनी आसान है!</p>
@@ -71,3 +71,4 @@
   </footer>
 </body>
 </html>
+
